Created new \'agents\' endpoint
